adding the second section

--- a/karamozi/index.html
+++ b/karamozi/index.html
@@ -69,7 +69,7 @@
                   id=""
                 />
               </div>
-              <div class="box_form_slide1">
+              <div class="box_form_slide1 form-box-one">
                 <i class="fa fa-envelope"></i>
                 <input
                   type="email"
@@ -85,6 +85,38 @@
                 </button>
               </div>
             </form>
+          </div>
+        </div>
+      </div>
+
+      <div class="slide2_home">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="box-desc">
+              <h2>کسب و کار خود را ارتقا دهید</h2>
+              <div class="box2-text">
+                لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با
+                استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله
+                در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد
+                نیاز، و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد،
+                کتابهای زیادی در شصت و سه درصد گذشته حال و آینده، شناخت فراوان
+                جامعه و متخصصان را می طلبد، تا با نرم افزارها شناخت بیشتری را
+                برای طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در
+                زبان فارسی ایجاد کرد، در این صورت می توان امید داشت که تمام و
+                دشواری موجود در ارائه راهکارها، و شرایط سخت تایپ به پایان رسد و
+                زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی، و جوابگوی سوالات
+                پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.
+              </div>
+              <div class="box_form_btn2">
+                <button >
+                  درباره ما 
+                  <i class="fa fa-arrow-left"></i>
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 box-img-slide2">
+            <img src="img/superman_3d.png" alt="" width="100%" />
           </div>
         </div>
       </div>
